# dart-typegen

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  __dart_typegen_failed.dart  flake.nix  foo_doc.md  test.dart  test.kdl
book/: book.toml
book/src/: SUMMARY.md  getting-started.md  motivation.md
book/src/usage/: classes.md  enums.md  index.md
examples/: class_docs.kdl  class_extra_dart.kdl  class_field_default.kdl  class_field_docs.kdl  class_simple.kdl  class_with_class_field.kdl  default_field_case.kdl  default_sealed_unions.kdl  empty.kdl  enum_docs.kdl  enum_extra_dart.kdl  enum_json_value.kdl  enum_simple.kdl  kitchen_sink.kdl  postamble.kdl  preamble.kdl  type_list.kdl  union_docs.kdl  union_extra_dart.kdl  union_json_discriminant.kdl  union_sealed.kdl  union_simple.kdl
src/: args.rs  main.rs
src/codegen/: class.rs  enumeration.rs  equals.rs  immutable.rs  json.rs  mod.rs  mutable.rs  union.rs  util.rs
src/context/: mod.rs  ty.rs
src/model/: example.kdl  meta.rs  mod.rs  options.rs  tests.rs  util.rs
src/model/snapshots/: dart_typegen__model__tests__can_parse_example.snap  dart_typegen__model__tests__class_docs.snap  dart_typegen__model__tests__class_extra_dart.snap  dart_typegen__model__tests__class_field_default.snap  dart_typegen__model__tests__class_field_docs.snap  dart_typegen__model__tests__class_simple.snap  dart_typegen__model__tests__class_with_class_field.snap  dart_typegen__model__tests__default_field_case.snap  (+15 more)
src/tests/: equivalence.rs  integration.rs  mod.rs
src/tests/snapshots/: foo.kdl  (+1 more)
src/validate/: mod.rs  tests.rs
(+24 files in other folders)
