[package]
name = "dart-typegen"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive", "string"] }
convert_case = "0.8.0"
insta = "1.43.1"
knus = "3.3.1"
miette = { version = "7.6.0", features = ["fancy", "syntect-highlighter"] }
thiserror = "2.0.12"

[dev-dependencies]
fs_extra = "1.3.0"
proptest = { version = "1.7.0", features = ["attr-macro"] }
tempdir = "0.3.7"
