[package]
name = "dart-typegen"
description = "CLI tool for generating Dart POD-type boilerplate"
version = "0.1.4"
edition = "2024"
repository = "https://github.com/cameron1024/dart-typegen"
license = "MIT OR Apache-2.0"
authors = ["Cameron Mclouglin"]
keywords = ["dart", "codegen"]
categories = ["command-line-utilities"]

[dependencies]
chumsky = "0.10.1"
clap = { version = "4.5.40", features = ["derive", "string"] }
convert_case = "0.8.0"
human-panic = "2.0.3"
insta = "1.43.1"
knus = "3.3.1"
miette = { version = "7.6.0", features = ["fancy", "syntect-highlighter"] }
thiserror = "2.0.12"

[dev-dependencies]
fs_extra = "1.3.0"
pretty_assertions = "1.4.1"
proptest = { version = "1.7.0", features = ["attr-macro"] }
tempdir = "0.3.7"
